samples/_failures_safe/1761496119_8a310a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a7198a0.c: In function ‘print_token’:
./samples/SAFE/__tmp_7a7198a0.c:166:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  166 |     const char *type_names[]
      |     ^~~~~
./samples/SAFE/__tmp_7a7198a0.c:166:5: error: expected declaration or statement at end of input
